--- a/chemboard.html
+++ b/chemboard.html
@@ -811,6 +811,8 @@
       const IS_ADDING = 'IS_ADDING'
       const SUM = 'SUM'
       const DIFFERENCE = 'DIFFERENCE'
+      const DICTIONARY_WORD = 'DICTIONARY_WORD'
+      const WORD_LENGTH_LIMIT = 'WORD_LENGTH_LIMIT'
 
       const dom = {}
       dom[WALLPAPER] = document.getElementById(WALLPAPER)
@@ -1683,6 +1685,8 @@
 	212915, 
 	236531
       ]
+
+      const dictionary = ['abandon','ability','able','about','above','abroad','absence','absent','absolute','abstract','abuse','abusive','academic','accept','acceptable','acceptance','access','accident','accompany','according+to','account','accountant','accurate','baby','back','backward','bacterium','bad','badly','bag','baggage','bake','balance','ball','band','bandage','bang','bank','banker','bankrupt','bankruptcy','cage','cake','calculate','calculation','calendar','call','calm','camera','camp','campaign','campus','can','cancel','cancer','candidate','candy','cap','capable','capacity','capital','captain','capture','car','dad','daily','dam','damage','damp','dance','danger','dangerous','dare','dark','data','date','daughter','dawn','day','dead','deaf','deal','dear','death','e-mail','each','eager','ear','earlier','earlobe','early','earn','earth','ease','east','easy','easygoing','eat','economic','economics','economist','economy','edge','edit','edition','fabric','face','fact','factor','factory','faculty','fail','failure','faint','fair','faith','fake','fall','false','fame','familiar','family','famous','fan','fancy','far','gain','gallon','game','gap','garage','garbage','garden','gas','gate','gather','gay','gear','gender','gene','general','generally','generate','generation','generosity','generous','gentle','gentleman','genuine','geography','get','giant','habit','hail','hair','half','hammer','hand','handle','handsome','handwriting','hang','happen','happy','harbor','hard','hardly','hardware','harm','harsh','harvest','hat','ice','idea','ideal','identical','identification','identify','identity','if','ignore','ill','illegal','illness','illustrate','image','imaginary','imagination','imaginative','imagine','imitate','immediate','immigrant','immoral','impact','impatience','impatient','import','jacket','jail','jam','jar','jaw','jealous','jealousy','jelly','jet','jewel','jeweler','jewelry','job','join','joint','joke','journal','journey','joy','judge','judgment','juice','jump','keen','keep','key','kick','kid','kill','kind','kindness','king','kingdom','kiss','kitchen','knee','kneel','knife','knit','knock','knot','know','knowledge','knuckle','label','labor','laboratory','lack','ladder','lady','lake','lamp','land','landlord','lane','language','large','last','late','lately','latter','laugh','machine','mad','magazine','magic','mail','main','maintain','major','majority','make','male','malice','man','manage','management','manager','manner','manufacture','many','map','march','margin','mark','nail','naked','name','narrow','nation','national','native','natural','naturally','nature','nausea','navy','near','nearby','nearly','neat','necessary','neck','need','needle','negative','negligence','negligent','neighbor','object','objection','objective','observation','observe','obsessive','obtain','obvious','occasion','occasionally','occupation','occupy','occur','ocean','odd','odor','of','off','offend','offense','offensive','offer','p.m.','pace','pack','package','pad','page','pain','painful','paint','painter','painting','pair','pale','palm','pan','panel','panic','pants','paper','parade','paragraph','parallel','paraphrase','parent','park','parliament','qualification','qualify','quality','quantity','quarter','quarterly','queen','question','quick','quiet','quit','quite','quiz','quotation','quote','race','racial','radical','radio','rage','rail','railroad','rain','raise','range','rank','rapid','rare','rarely','rash','rate','rather','ratio','rational','raw','reach','react','sacrifice','sad','sadness','safe','safety','sail','sake','salad','salary','sale','salesman','salesperson','saleswoman','salt','same','sample','sand','sandwich','sarcastic','satisfaction','satisfy','sauce','save','savings','say','scale','scalp','table','tactful','tactless','tail','take','talent','talk','tall','tank','tap','tape','target','task','taste','tax','tea','teach','teacher','team','tear','technical','technique','ugly','umbrella','umpire','unable','uncle','under','undergo','undergraduate','underground','underneath','understand','understanding','undertake','undertaker','undo','unemployed','unemployment','unfortunate','unfortunately','unhappiness','unhappy','uniform','union','unique','unit','unite','vacation ','vagina','valley','valuable','value','variation','variety','various','vary','vast','vegetable','vehicle','verb','verdict','version','very','vessel','veterinarian','victim','victory','video','videographer','view','village','violence','violent','wage','waist','wait','waiter','waiting room','waitress','wake','walk','wall','wallet','wander','want','war','warm','warm front','warmth','warn','warning','wash','waste','watch','water','wave','wax','yard','yawn','year','yearly','yell','yellow','yes','yesterday','yet','you','young','your','yours','yourself','youth','zero','zone','zoo']
     
       const colorWheelSideLength = 400
 
@@ -1739,6 +1743,7 @@
       defaultState[SAVED_MARKS_DATA] = {}
       defaultState[MARKS_HISTORY_LENGTH] = 50
       defaultState[MATH_PROBLEM_LIMIT] = 10
+      defaultState[WORD_LENGTH_LIMIT] = 6
 
       const updateMarksHistory = (dataURL=dom[MARKS].toDataURL('image/png')) => {
 	if (marksHistory.length < wState[MARKS_HISTORY_LENGTH]) {
@@ -2637,8 +2642,10 @@
 	    plotFunction(storedFunction.f, storedFunction.style, offset, true)
 	  }
 	}
-	if (mathProblemState > -1) {
+	if (mathProblemState > -1 && mathProblemState < 2) {
 	  doMathProblem(mathProblemState, wState[MATH_PROBLEM_LIMIT], true)
+	} else if (mathProblemState > 1) {
+	  doReadingProblem(mathProblemState, wState[WORD_LENGTH_LIMIT], true)
 	}
 	return [
 	  [
@@ -3019,6 +3026,54 @@
 	}
       }
 
+      doReadingProblem = (
+	problemState=mathProblemState, 
+	limit=wState[WORD_LENGTH_LIMIT], 	
+	preserve=false
+      ) => {
+	mathProblemState = problemState
+	wState[WORD_LENGTH_LIMIT] = limit
+	if (problemState > 1) {
+	  if (!preserve) {
+	    const word = dictionary[Math.floor(Math.random() * dictionary.length)]
+	    if (word.length <= wState[WORD_LENGTH_LIMIT]) {
+	      wState[DICTIONARY_WORD] = word
+	    } else {
+	      doReadingProblem(mathProblemState)
+	    }
+	  }
+	  drawText(
+	    GRID,
+	    wState[DICTIONARY_WORD],
+	    new Vector2(100, 200),
+	    wState[BRUSHES][10].color,
+	    120
+	  )
+	  if (mathProblemState > 2) {
+	    fetch(`https://www.dictionaryapi.com/api/v3/references/learners/json/${wState[DICTIONARY_WORD]}?key=6515d888-483b-4fb4-a753-0151d72dde64`)
+	      .then(response => {
+		return response.json()
+	      })
+	      .then(data => {
+		// Work with JSON data here
+		drawText(
+		  GRID,
+		  `\\${data[0].hwi.prs[0].ipa}\\`, //data[0].dros[Math.floor(Math.random() * data[0].dros.length)].drp,
+		  new Vector2(100, 300),
+		  wState[BRUSHES][10].color,
+		  60
+		)
+	      })
+	      .catch(err => {
+		// Do something for an error here
+	      })
+	  }
+	} else {
+	  mathProblemState = 2
+	  doReadingProblem(mathProblemState)
+	}
+      }
+
       // Typing
       function typingFunction (e) {
 	if (![
@@ -3107,7 +3162,7 @@
 	tools[wState[TOOL]].mouseUp(currentMouseLocation)
       })
 
-      document.body.addEventListener("touchstart", function (e) {
+      document.body.addEventListener('touchstart', function (e) {
 	if (e.target.id === SENSOR) {
 	  e.preventDefault()
 	  const touchLocation = new Vector2(e.pageX, e.pageY)
@@ -3118,7 +3173,7 @@
 	  tools[wState[TOOL]].mouseDown(touchLocation)
 	}
       }, { passive: false })
-      document.body.addEventListener("touchmove", function (e) {
+      document.body.addEventListener('touchmove', function (e) {
 	if (e.target === dom[SENSOR]) {
 	  e.preventDefault()
 	  const touchLocation = new Vector2(e.pageX, e.pageY)
@@ -3127,8 +3182,8 @@
 	    tools[wState[TOOL]].mouseMove(touchLocation)
 	  }
 	}
-      }, { passive: false });
-      document.body.addEventListener("touchend", function (e) {
+      }, { passive: false })
+      document.body.addEventListener('touchend', function (e) {
 	if (e.target === dom[SENSOR]) {
 	  e.preventDefault()
 	  const touchLocation = new Vector2(e.pageX, e.pageY)
@@ -3139,7 +3194,7 @@
       }, { passive: false })
 
       dom[SENSOR].addEventListener('mouseup', (event) => {
-	mouseIsDown = false;
+	mouseIsDown = false
 	isDrawing = false
 	let mouse = new Vector2(wState[MOUSE_MOVE_LOCATION].x, wState[MOUSE_MOVE_LOCATION].y)
 	let width = mouse.x -wState[MOUSE_DOWN_LOCATION].x
@@ -3191,7 +3246,7 @@
 	      isTyping = true
 	      drawTextCursor()
 	    }
-	    break;
+	    break
 	  case 'g':
 	  case 'G':
 	    if (!isTyping) {
@@ -3205,7 +3260,7 @@
 	      wState[GRID_TYPE].setCoordinates(wState[GRID_TYPE].x, (wState[GRID_TYPE].y + 1) % 3)
 	      setGrid()
 	    }
-	    break;
+	    break
 	  case 'i':
 	  case 'I':
 	    if (!isTyping) {
@@ -3243,14 +3298,14 @@
 	      setWhiteboardState(BRUSHES, wState[BRUSHES])
 	      setWhiteboardState(ERASE_RADIUS, wState[ERASE_RADIUS])
 	    } 
-	    break;
+	    break
 	  case '=':
 	    if (!isTyping) {
 	      setBrushWidth(parseInt(wState[BRUSHES][wState[BRUSH]].width) + 1)
 	      setWhiteboardState(BRUSHES, wState[BRUSHES])
 	      setWhiteboardState(ERASE_RADIUS, wState[ERASE_RADIUS])
 	    }
-	    break;
+	    break
 	  case '[':
 	    if (!isTyping && wState[FONT_HEIGHT] > 0) {
 	      setFontHeight(wState[FONT_HEIGHT] - 1)
@@ -3307,9 +3362,9 @@
 	keyIsDown = true
       })
 
-      window.addEventListener("keydown", function (event) {
+      window.addEventListener('keydown', function (event) {
 	if (event.defaultPrevented) {
-	  return; // Do nothing if the event was already processed
+	  return // Do nothing if the event was already processed
 	}
 	switch (event.key) {
 	case 'ArrowRight':
@@ -3448,7 +3503,7 @@
 	case ' ':
 	  event.preventDefault()
 	  if (!isTyping) {
-	    spaceIsDown = true;
+	    spaceIsDown = true
 	  }
 	  break
 	case 'Escape':
@@ -3485,20 +3540,27 @@
 	   wState[PRINT_HEAD_LOCATION].x = wState[MOUSE_DOWN_LOCATION].x
 	   wState[PRINT_HEAD_LOCATION].y += wState[LINE_SPACING]
 	    drawTextCursor()
-	  } else if (mathProblemState > -1) {
+	  } else if (mathProblemState > -1 && mathProblemState < 2) {
 	    doMathProblem(
 	      mathProblemState = (mathProblemState + 1) % 2, 
 	      wState[MATH_PROBLEM_LIMIT], 
 	      [false, true][mathProblemState]
 	    )
 	    mathProblemState === 0 && setGrid()
+	  } else if (mathProblemState > 1) {
+	    doReadingProblem(
+	      mathProblemState = ((mathProblemState + 1) % 2) + 2,
+	      wState[WORD_LENGTH_LIMIT],
+	      [false, true][mathProblemState - 2]
+	    )
+	    mathProblemState === 2 && setGrid()
 	  }
 	}
-      });
+      })
 
-      window.addEventListener("keyup", function (event) {
+      window.addEventListener('keyup', function (event) {
 	if (event.defaultPrevented) {
-	  return; // Do nothing if the event was already processed
+	  return // Do nothing if the event was already processed
 	}
 
 	switch (event.key) {
